refactor : code rabbit 리뷰 반영